--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,28 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+const pageTitle = "Home"
+const pageDescription = "Home"
 ---
-
-<Layout>
-	<Welcome />
-</Layout>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>{pageTitle}</title>
+    <meta name="description" content={pageDescription} />
+  </head>
+  <body>
+    <h1>Home</h1>
+	<p>
+		Bienvenidos al blog de jesus clemente aqui aprenderemos a crear blogs con astro.
+	</p>
+	<h2>Posts</h2>
+    <p>
+		<a href="/posts/post-1">Post 1</a>
+		<a href="/posts/post-2">Post 2</a>
+		<a href="/posts/post-3">Post 3</a>
+	</p>
+	<h2>Pages</h2>
+    <p>
+		<a href="/about">About</a>
+    </p>
+  </body>
+</html>
