--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,4 +1,5 @@
 ---
+import Navigation from '../components/Navigation.astro';
 const pageTitle = "Home"
 const pageDescription = "Home"
 ---
@@ -10,19 +11,10 @@ const pageDescription = "Home"
     <meta name="description" content={pageDescription} />
   </head>
   <body>
+	<Navigation />
     <h1>Home</h1>
 	<p>
 		Bienvenidos al blog de jesus clemente aqui aprenderemos a crear blogs con astro.
 	</p>
-	<h2>Posts</h2>
-    <p>
-		<a href="/posts/post-1">Post 1</a>
-		<a href="/posts/post-2">Post 2</a>
-		<a href="/posts/post-3">Post 3</a>
-	</p>
-	<h2>Pages</h2>
-    <p>
-		<a href="/about">About</a>
-    </p>
   </body>
 </html>
