feat: Add and integrate a new footer component into main pages.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,6 @@
 ---
 import Navigation from '../components/Navigation.astro';
+import Footer from '../components/Footer.astro';
 const pageTitle = "Home"
 const pageDescription = "Home"
 ---
@@ -16,5 +17,6 @@ const pageDescription = "Home"
 	<p>
 		Bienvenidos al blog de jesus clemente aqui aprenderemos a crear blogs con astro.
 	</p>
+	<Footer />
   </body>
 </html>
