--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@/components/Footer.astro";
 import Navigation from "@/components/Navigation.astro";
 import "@/styles/global.css";
 const pageTitle = "Sobre mi";
@@ -76,5 +77,6 @@ const skillColor = "crimson"
         <p>Mi objetivo no son 3 días.</p>
       )
     }
+    <Footer />
   </body>
 </html>
