--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from "@/components/Footer.astro";
 import Navigation from "@/components/Navigation.astro";
 
 ---
@@ -17,5 +18,6 @@ import Navigation from "@/components/Navigation.astro";
 		<a href="/posts/post-2">Post 2</a>
 		<a href="/posts/post-3">Post 3</a>
 	</p>
+    <Footer />
   </body>
 </html>
