--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,12 +1,11 @@
 ---
 const pageTitles = [
-    {title: "Home", href: "/"},
-    {title: "About", href: "/about/"},
-    {title: "Blog", href: "/blog/"},
-]
+  { title: "Home", href: "/" },
+  { title: "About", href: "/about/" },
+  { title: "Blog", href: "/blog/" },
+];
 ---
+
 <nav>
-    {pageTitles.map((page) => (
-        <a href={page.href}>{page.title}</a>
-    ))}
+  {pageTitles.map((page) => <a href={page.href}>{page.title}</a>)}
 </nav>
