refactor: Replace direct Navigation component usage with a new Header component that encapsulates it across pages.

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "@/components/Footer.astro";
-import Navigation from "@/components/Navigation.astro";
+import Header from "@/components/Header.astro";
 import "@/styles/global.css";
 const pageTitle = "Sobre mi";
 const pageDescription = "Todo sobre jcdev";
@@ -38,7 +38,7 @@ const skillColor = "crimson"
     </style>
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>{pageTitle}</h1>
     <h2>... ¡y mi nuevo sitio Astro!</h2>
     <p>
