--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,6 +1,6 @@
 ---
 import Footer from "@/components/Footer.astro";
-import Navigation from "@/components/Navigation.astro";
+import Header from "@/components/Header.astro";
 
 ---
 <html lang="en">
@@ -11,7 +11,7 @@ import Navigation from "@/components/Navigation.astro";
     <meta name="description" content="Blog" />
   </head>
   <body>
-    <Navigation />
+    <Header />
     <h1>Blog</h1>
     <p>
 		<a href="/posts/post-1">Post 1</a>
