--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Navigation from '../components/Navigation.astro';
+import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
 const pageTitle = "Home"
 const pageDescription = "Home"
@@ -12,7 +12,7 @@ const pageDescription = "Home"
     <meta name="description" content={pageDescription} />
   </head>
   <body>
-	<Navigation />
+	<Header />
     <h1>Home</h1>
 	<p>
 		Bienvenidos al blog de jesus clemente aqui aprenderemos a crear blogs con astro.
