feat: Add global CSS imports to pages and introduce responsive navigation styling.

--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -6,6 +6,6 @@ const pageTitles = [
 ];
 ---
 
-<nav>
+<div id="main-menu" class="nav-links">
   {pageTitles.map((page) => <a href={page.href}>{page.title}</a>)}
-</nav>
+</div>
