--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,8 +1,9 @@
 ---
 import Footer from "@/components/Footer.astro";
 import Header from "@/components/Header.astro";
-
+import "../styles/global.css";
 ---
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -14,10 +15,10 @@ import Header from "@/components/Header.astro";
     <Header />
     <h1>Blog</h1>
     <p>
-		<a href="/posts/post-1">Post 1</a>
-		<a href="/posts/post-2">Post 2</a>
-		<a href="/posts/post-3">Post 3</a>
-	</p>
+      <a href="/posts/post-1">Post 1</a>
+      <a href="/posts/post-2">Post 2</a>
+      <a href="/posts/post-3">Post 3</a>
+    </p>
     <Footer />
   </body>
 </html>
