--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -1,24 +1,15 @@
 ---
-import Footer from "@/components/Footer.astro";
-import Header from "@/components/Header.astro";
 import "../styles/global.css";
+import BaseLayout from "@/layouts/BaseLayout.astro";
+const pageTitle = "Blog";
+const pageDescription = "Blog";
 ---
-
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Blog</title>
-    <meta name="description" content="Blog" />
-  </head>
-  <body>
-    <Header />
-    <h1>Blog</h1>
-    <p>
-      <a href="/posts/post-1">Post 1</a>
-      <a href="/posts/post-2">Post 2</a>
-      <a href="/posts/post-3">Post 3</a>
-    </p>
-    <Footer />
-  </body>
-</html>
+<BaseLayout pageTitle={pageTitle} pageDescription={pageDescription}>
+    <body>
+      <p>
+        <a href="/posts/post-1">Post 1</a>
+        <a href="/posts/post-2">Post 2</a>
+        <a href="/posts/post-3">Post 3</a>
+      </p>
+    </body>
+</BaseLayout>
