--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,13 +3,22 @@ import "../styles/global.css";
 import BaseLayout from "@/layouts/BaseLayout.astro";
 const pageTitle = "Blog";
 const pageDescription = "Blog";
+const allBlogs = Object.values(
+  import.meta.glob("./posts/*.md", { eager: true })
+);
 ---
+
 <BaseLayout pageTitle={pageTitle} pageDescription={pageDescription}>
-    <body>
-      <p>
-        <a href="/posts/post-1">Post 1</a>
-        <a href="/posts/post-2">Post 2</a>
-        <a href="/posts/post-3">Post 3</a>
-      </p>
-    </body>
+  <body>
+    <p>Aquí es donde publicaré sobre mi viaje de aprendizaje de Astro.</p>
+    <ul>
+      {
+        allBlogs.map((post: any) => (
+          <li>
+            <a href={post.url}>{post.frontmatter.title}</a>
+          </li>
+        ))
+      }
+    </ul>
+  </body>
 </BaseLayout>
