feat: Introduce dynamic tag pages and update BlogPost component to receive the full post object.

--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,8 +16,7 @@ const allBlogs = Object.values(
       {
         allBlogs.map((post: any) => (
           <li>
-            <BlogPost postUrl={post.url} frontmatter={post.frontmatter} />
-            <a href={post.url}>{post.frontmatter.title}</a>
+            <BlogPost post={post} frontmatter={post.frontmatter} />
           </li>
         ))
       }
