--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,8 +1,8 @@
 ---
-const { frontmatter, postUrl } = Astro.props;
+const { frontmatter, post } = Astro.props;
 ---
 <div>
-    <a href={postUrl}><h2>{frontmatter.title}</h2></a>
+    <a href={post.url}><h2>{frontmatter.title}</h2></a>
     <p>{frontmatter.description}</p>
     <p>{frontmatter.pubDate.toString().slice(0,10)}</p>
     <p>Escrito por: {frontmatter.author}</p>
