--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -16,7 +16,7 @@ const allBlogs = Object.values(
       {
         allBlogs.map((post: any) => (
           <li>
-            <BlogPost post={post} frontmatter={post.frontmatter} />
+            <BlogPost post={post} />
           </li>
         ))
       }
