--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -3,6 +3,7 @@ const pageTitles = [
   { title: "Home", href: "/" },
   { title: "About", href: "/about/" },
   { title: "Blog", href: "/blog/" },
+  { title: "Tags", href: "/tags/" },
 ];
 ---
 
