--- a/src/layouts/MarkdownPostLayout.astro
+++ b/src/layouts/MarkdownPostLayout.astro
@@ -1,5 +1,6 @@
 ---
 import BaseLayout from "./BaseLayout.astro";
+import { Image } from "astro:assets";
 
 const { frontmatter } = Astro.props;
 const tags = frontmatter.tags;
@@ -13,17 +14,24 @@ const tags = frontmatter.tags;
     <p>{frontmatter.pubDate.toString().slice(0, 10)}</p>
     <p><em>{frontmatter.description}</em></p>
     <p>Escrito por: {frontmatter.author}</p>
-    <img src={frontmatter.image.url} width="300" alt={frontmatter.image.alt} />
+    <Image
+      src={frontmatter.image.url}
+      width={300}
+      inferSize
+      alt={frontmatter.image.alt}
+    />
     <slot />
   </body>
 
   <div>
     <ul class="tags">
-      {tags.map((tag: any) => (
-        <li class="tag">
-          <a href={`/tags/${tag}`}>{tag}</a>
-        </li>
-      ))}
+      {
+        tags.map((tag: any) => (
+          <li class="tag">
+            <a href={`/tags/${tag}`}>{tag}</a>
+          </li>
+        ))
+      }
     </ul>
   </div>
 </BaseLayout>
@@ -32,6 +40,12 @@ const tags = frontmatter.tags;
   a {
     color: #00539f;
     text-decoration: none;
+  }
+
+  img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 0.5rem;
   }
 
   .tags {
