--- a/src/components/BlogPost.astro
+++ b/src/components/BlogPost.astro
@@ -1,4 +1,6 @@
 ---
+import { Image } from "astro:assets";
+
 const { post } = Astro.props;
 ---
 
@@ -7,10 +9,20 @@ const { post } = Astro.props;
   <p>{post.frontmatter.description}</p>
   <p>{post.frontmatter.pubDate.toString().slice(0, 10)}</p>
   <p>Escrito por: {post.frontmatter.author}</p>
-  <img
+  <Image
     src={post.frontmatter.image.url}
-    width="300"
     alt={post.frontmatter.image.alt}
+    inferSize
+    width={300}
   />
   <slot />
 </div>
+
+<style is:inline>
+  img {
+    max-width: 100%;
+    height: auto;
+    object-fit: cover;
+    border-radius: 10px;
+  }
+</style>
