fix: add "hábiles" to day descriptions on about page

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -63,9 +63,9 @@ const skillColor = "crimson";
 
     {
       goal === 3 ? (
-        <p>Mi objetivo es terminar en 3 días.</p>
+        <p>Mi objetivo es terminar en 3 días hábiles.</p>
       ) : (
-        <p>Mi objetivo no son 3 días.</p>
+        <p>Mi objetivo no son 3 días hábiles.</p>
       )
     }
   </body>
